# fiff

./: .gitignore  CMakeLists.txt  README.md  build  commandlineinput.hpp  compile  fiffreader.hpp  fifftag.hpp  fromfiff.cpp  project  tofiff.cpp
.github/workflows/: main.yml  release.yml
doc/: Doxyfile  doxygen-awesome.css
resources/scripts/: coverage  header_only_lib  headerlib  package_lib
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/anonymizer/: CMakeLists.txt  anonymizer.cpp  anonymizer.hpp  main.cpp
src/app/fiffdoctor/: CMakeLists.txt  color.h  docapp.cpp  docapp.hpp  fiffsource.cpp  fiffsource.hpp  main.cpp
src/app/fiffsplice/: CMakeLists.txt  main.cpp
src/app/fit/: CMakeLists.txt  main.cpp
src/app/printfiff/: CMakeLists.txt  main.cpp
src/app/qfiff/: CMakeLists.txt  main.cpp
src/app/qtprintfiff/: CMakeLists.txt  main.cpp  timeseriesview.cpp  timeseriesview.hpp  tracer.cpp  tracer.hpp
src/lib/: CMakeLists.txt
src/lib/core/: CMakeLists.txt  commandlineinput.cpp  endian.cpp  endian.hpp  stringmanip.cpp  stringmanip.hpp
src/lib/core/include/core/: commandlineinput.hpp  endian.hpp  stringmanip.hpp
src/lib/corelib/: CMakeLists.txt  commandlineinput.cpp  endian.cpp  stringmanip.cpp
src/lib/corelib/include/core/: commandlineinput.hpp  endian.hpp  stringmanip.hpp
src/lib/data/: CMakeLists.txt  epoch.cpp  epoch.hpp  parse.cpp  parse.hpp
src/lib/data/include/data/: parse.hpp
src/lib/datalib/: CMakeLists.txt
src/lib/datalib/include/data/: parse.hpp
src/lib/fiff/: CMakeLists.txt  data.cpp  data.hpp  formatting.cpp  formatting.hpp  input.cpp  input.hpp  json.cpp  json.hpp  output.cpp  output.hpp  tag.cpp  tag.hpp  types.hpp
src/lib/fiff/include/fiff/: data.hpp  formatting.hpp  input.hpp  output.hpp  tag.hpp  types.hpp
src/lib/fifflib/: CMakeLists.txt  file.cpp  filein.cpp  fileout.cpp  formatting.cpp  idmap.cpp  input.cpp  output.cpp  tag.cpp  taginstream.cpp  tagloader.cpp  tagoutstream.cpp
src/lib/fifflib/include/fiff/: datatypes.hpp  fiffwriter.hpp  file.hpp  filein.hpp  fileout.hpp  formatting.hpp  idmap.hpp  input.hpp  output.hpp  tag.hpp  taginstream.hpp  tagloader.hpp  tagoutstream.hpp
src/lib/iolib/: CMakeLists.txt  file.cpp
src/lib/iolib/include/io/: endian.hpp  file.hpp
src/lib/qtui/: CMakeLists.txt  timeseriesview.cpp  timeseriesview.hpp
src/lib/utils/: CMakeLists.txt  commandlineinput.cpp  commandlineinput.hpp
src/test/: CMakeLists.txt  run_tests
src/test/app/: CMakeLists.txt
src/test/lib/: CMakeLists.txt
src/test/lib/core/: CMakeLists.txt
src/test/lib/fiff/: CMakeLists.txt  i_inputoutput.cpp  u_json.cpp  u_output.cpp  u_tag.cpp
test/: CMakeLists.txt  README.md  run_tests
test/app/: CMakeLists.txt
test/lib/: CMakeLists.txt
test/lib/core/: CMakeLists.txt
test/lib/fiff/: CMakeLists.txt  i_inputoutput.cpp  main.cpp  u_data.cpp  u_input.cpp  u_output.cpp  u_tag.cpp
